SERVER-2294 capped truncate handle empty extent